--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
 
         .img1 {
-            width: 300px;
-            height: 450px;
+
         }
 
         .container-fluid {
@@ -96,6 +95,12 @@
 
         .text3 {
             text-align: end;
+        }
+        .obr{
+            width: 100%;
+        }
+        .xd{
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -156,7 +161,7 @@
                 <h2>Třídní schůzky</h2>
                 <p>23.03.2023 <span class="mezera1">Filip Mašek</span> <span class="mezera1">Důležité sdělení</span></p>
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-12">
                         <p> <b> Dne 12.4. od 16 hodin</b> se konají třídní schůzky.</p>
                         <p>Rodiče budou mít možnost obdržet informace o prospěchu a chování studentů ve třetím čtvrtletí
                             probíhajícího školního roku a rovněž případné aktuální organizační informace.</p>
@@ -178,8 +183,7 @@
                             kategorií postupují do okresního kola.</p>
                         <p>Gratulujeme!</p>
                     </div>
-                    <a href="https://www.spsmb.cz/kultura/odpoledne-plne-poezie/" class=" col-lg-4 xd"><img src="xd.png"
-                            alt=""></a>
+                    <a href="https://www.spsmb.cz/kultura/odpoledne-plne-poezie/" class=" col-lg-4 xd"><img src="xd.png"alt="" class="obr col-lg-12"></a>
                     <p class="text3">Zdroj: https://www.spsmb.cz/aktuality/</p>
                 </div>
             </div>
@@ -187,7 +191,7 @@
                 <h2>Výměna oken, nové těsnění</h2>
                 <p>13.01.2023 <span class="mezera1">Tomáš Tran</span> <span class="mezera1">Důležité sdělení</span></p>
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-7">
                         <p>Od pondělí 06.02.2023 bude ve škole probíhat výměna oken, která škole přinese teplo, lepší
                             těsnění a příjemný vzhled. Kvůli této renovaci, můžete očekávat hluk, prach, piliny
                             a cizí osoby na chodbách, prosíme tedy abyste dávali pozor na své okolí a své věci, pokud
@@ -198,9 +202,11 @@
                             v rámci probíhající rekonstrukce školy vzduchotechnika na odvedení vlhkosti. Budete muset
                             tedy používat pro vchod do školy hlavní vchod u vrátnice.<br><b>Vstupní karty s chipy budou
                                 vám automaticky přenastaveny.</b>
+                                <img src="okno.jpg" alt="xd" class="col-lg-9 obr xd">
                         </p>
                     </div>
-                    <img src="obr.PNG" alt="" class="img1 col-lg-4">
+                    <img src="obr.PNG" alt="xd" class="img1 col-lg-5">
+                    
                     <div class="row">
                         <p class="col-lg-8"></p>
                         <p class="text3 col-lg-4">Zdroj: Mgr. Švábová Šárka </p>
